--- a/src/locales/es/landing.json
+++ b/src/locales/es/landing.json
@@ -118,7 +118,7 @@
         },
         "Giza": {
           "title": "Giza testnet",
-          "text": "Sumer is our eleventh testnet, introducing V2 of the Storage and Distribution System.",
+          "text": "Sumer es nuestra undécima red de pruebas, que introduce la V2 del sistema de almacenamiento y distribución.",
           "explore": "Explore Giza"
         }
       }
