Update and rename src/locales/en/token.json to src/locales/ge/token.json

--- a/src/locales/ge/token.json
+++ b/src/locales/ge/token.json
@@ -1,5 +1,5 @@
 {
-  "Token": {
+  "token": {
     "siteMetadata": {
       "title": "Token",
       "description": "Teilnehmer unseres Testnetzwerks können jetzt Joystream Testnet Tokens (tJOYs) verdienen, die durch Fiat-Währung gesichert sind."    },
