--- a/src/locales/ge/about.json
+++ b/src/locales/ge/about.json
@@ -11,12 +11,12 @@
         "cto": "CTO",
         "cooAndGrowth": "COO & Wachstum",
         "all": "Alle",
-        "allMembers": "All Mitglieder"
+        "allMembers": "Alle Mitglieder"
       }
     },
     "siteMetadata": {
       "title": "Über uns",
-      "description": "Wir bieten nicht nur eine großartige Vergütung und Flexibilität, sondern auch den perfekten Auftrag, das perfekte Team und den perfekten Zeitpunkt für Sie, um etwas aufzubauen, das alles verändert."
+      "description": "Wir bieten nicht nur eine großartige Vergütung und Flexibilität, sondern auch den perfekten Auftrag, das perfekte Team und den perfekten Zeitpunkt für dich um etwas aufzubauen, das alles verändert."
     },
     "hero": {
       "title": "Wir bauen Joystream, um es zu befreien",
@@ -25,7 +25,7 @@
     "ourTeam": {
       "title": "Unser Team",
       "subtitle": "Wir kommen von verschiedenen Kontinenten, teilen aber die Leidenschaft für Open Source, Blockchain-Technologie, verteilte Systeme, Datenschutz und den Aufbau eines neuen Internets, das auf rechenschaftspflichtigen und forkable Institutionen basiert.",
-      "moreMembers": "Load more team members"
+      "moreMembers": "Lade mehr Teammitglieder"
     },
     "investors": {
       "title": "Unsere Investoren"
