--- a/src/locales/ge/antioch.json
+++ b/src/locales/ge/antioch.json
@@ -1,7 +1,7 @@
 {
   "antioch": {
     "siteMetadata": {
-      "description": "Erforsche das Antioch testnet"
+      "description": "Erforsche das Antioch Testnet"
     },
     "hero": {
       "Titel": "Antioch Network",
@@ -14,11 +14,11 @@
       "title": "Kritische Dokumente",
       "releasePlan": {
         "title": "Freigabeplan",
-        "text": "Lesen Sie den Freigabeplan, wie er in der Planungsphase erstellt wurde und erfahren Sie mehr über den Verlauf der Entwicklung."
+        "text": "Lese den Freigabeplan, wie er in der Planungsphase erstellt wurde und erfahre mehr über den Verlauf der Entwicklung."
       },
       "blogPost": {
         "title": "Ankündigung Blog Post",
-        "text": "Lesen Sie eine kurze Einführung in das Antioch-Testnetzwerk und seine Ziele."
+        "text": "Lese eine kurze Einführung in das Antioch Testnet und dessen Ziele."
       }
     },
     "testnetGoals": {
