--- a/src/locales/ge/athens.json
+++ b/src/locales/ge/athens.json
@@ -1,10 +1,10 @@
 {
-  "Athen": {
+  "athens": {
     "siteMetadata": {
       "description": "Entdecke das Athens testnet"
     },
     "hero": {
-      "Titel": "Athen Network",
+      "Titel": "Athens Network",
       "text": " Entdecke die verfügbaren Rollen und wähle diejenige, die am besten zu dir passt. Beeinflusse die Entwicklung der Plattform und verdienen dabei echtes Geld.",
       "chipText": "Was ist das?"
     },
@@ -19,11 +19,11 @@
       "title": "Kritische Dokumente",
       "fullSpecifications": {
         "title": "Vollständige Spezifikationen",
-        "text": "Für Athen wurden keine Spezifikationen veröffentlicht."
+        "text": "Für Athens wurden keine Spezifikationen veröffentlicht."
       },
       "releasePlan": {
         "title": "Freigabeplan",
-        "text": "Lesen Sie den Freigabeplan, wie er in der Planungsphase erstellt wurde, und erfahren Sie mehr über den Verlauf der Entwicklung."
+        "text": "Lese den Freigabeplan, wie er in der Planungsphase erstellt wurde, und erfahre mehr über den Verlauf der Entwicklung."
       }
     },
     "testnetGoals": {
