--- a/src/locales/es/get-started.json
+++ b/src/locales/es/get-started.json
@@ -6,7 +6,7 @@
     },
     "hero": {
       "title": "Cómo contribuir y participar",
-      "subtitle": "Leer más acerca de las formas actuales de añadir valor al proyecto y ganar recompensas por hacerlo.",
+      "subtitle": "Lee más acerca de las formas actuales de añadir valor al proyecto y ganar recompensas por hacerlo.",
       "buttonText": "Ver oportunidades",
       "imageAlt": "empezar a ser un héroe"
     },
