--- a/src/locales/ru/manifesto.json
+++ b/src/locales/ru/manifesto.json
@@ -63,7 +63,7 @@
         "reusability": "Более того, использование открытого исходного кода подразумевает, что все наработки платформы могут быть легко использованы повторно, а так как вся организационная структура и ее состояние являются публичными, можно клонировать целую экосистему и создать альтернативную платформу с альтернативными целями и политиками."
       }
     },
-    "ctaText": "В этом плане есть место и для вашего участия, поэтому присоединяйтесь, отправив нам <0>email</0>, или заходите в <1>Discord</1> или <2>Reddit</2>.",
+    "ctaText": "В этом плане есть место и для вашего участия, поэтому присоединяйтесь, отправив нам <0>email</0>, или заходите в <1>Discord</1>.",
     "references": {
       "title": "Ссылки",
       "text": "<0>[1] Эрсам Ф. Токены блокчейна и рассвет децентрализованной бизнес-модели. Medium. 1 августа, 2016.</0><0>[2] Сринивасан Б.С. Мысли о токенах. Medium. 27 мая, 2017.</0><0>[3] Диксон К. Крипто-токены: прорыв в проектировании открытых сетей. Medium. 1 июня, 2017.</0><0>[4] Хиршман Альберт О. Выход, голос и лояльность: реакция на упадок фирм, организаций и государств. №25. Издательство Гарвардского университета, 1970.</0><0>[5] Роше Жан-Шарль и Жан Тироль. «Конкуренция платформ на двусторонних рынках». Журнал Европейской экономической ассоциации 1.4 (2003): 990–1029.</0>"
